# MlodSurfaces

./: CMakeLists.txt  LICENSE  README.md
StandaloneBinary/: MLoDS
data/: Bearded_Man.params  Face.params  Face.ply  eisbar-holes.params  gargoyle_0.params  gargoyle_0.ply  half-igea.params  half-igea.ply  owl-headless.params  rhino-holes.params
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
sources/apss/: CPUUtils.cpp  CPUUtils.h  Fastapss.cu  Fastapss.h  GPUUtils.cu  GPUUtils.h  GlobalAPSS.cu  GlobalAPSS.h  Kernel.cpp  Kernel.h  Pn.cpp  Pn.h  Projection.cu  Projection.h  timer.h
sources/dual-contouring/: DCOctree.h  base.h  dual_contouring.h  dual_contouringV2.cpp  dual_contouringV2.h  octree.h
sources/dual-contouring/kdTreeNN/: kdTreeNN.h
sources/dual-contouring/src/: Vec3.h
sources/interface/: kernels.cpp  kernels.h  kernels.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parameters.cpp  parameters.h  parameters.ui  sliderWindow.cpp  sliderWindow.h  sliderWindow.ui  widgetopengl.cpp  widgetopengl.h
sources/misc/: DrawHistogram.h
sources/misc/kdTreeNN/: kdTreeNN.h
sources/opengl/: camera.cpp  camera.h  openglutils.cpp  openglutils.h
sources/opengl/shaders/: shader.frag  shader.vert  shaderSingleColor.frag  shaderSingleColor.vert  shaderWithPerPointColor.frag  shaderWithPerPointColor.vert
sources/scene/: scene.cpp  scene.h  upsample.cpp  upsample.h
